--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">idialer</string>
+    <string name="favorites">Favorites</string>
+    <string name="recents">Recents</string>
+    <string name="contacts">Contacts</string>
+    <string name="Keypad">Keypad</string>
+    <string name="voicemail">Voicemail</string>
 </resources>
