feat: edit vociemail page to setting page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="contacts">Contacts</string>
     <string name="Keypad">Keypad</string>
     <string name="voicemail">Voicemail</string>
+    <string name="setting">Setting</string>
 </resources>
